[package]
name = "unitree-lidar-l1-rust"
version = "0.1.0"
edition = "2024"
authors = ["Denis Koterov <denis.koterov@gmail.com>"]
description = "Rust wrapper for Unitree Lidar L1 SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/godbrigero/Unilidar-SDK-Rust"
homepage = "https://github.com/godbrigero/Unilidar-SDK-Rust"
documentation = "https://docs.rs/unitree-lidar-l1-rust"
keywords = ["lidar", "unitree", "robotics", "sensors", "l1"]
categories = ["hardware-support", "science::robotics"]
readme = "README.md"
exclude = ["*.yml", "Dockerfile.*"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
prost = "0.14.1"
bytes = "1.5"
url = "2.5"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2.171"
cxx = "1.0.150"
kiss3d = "0.35.0"
nalgebra = { version = "0.33.2", features = ["serde-serialize"] }
dbscan = "0.3.1"
image = "0.25.6"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cxx-build = "1.0.150"
